--- a/frontend/src/login/login.css
+++ b/frontend/src/login/login.css
@@ -77,6 +77,10 @@ body {
     border-radius: 4px;
 }
 
+.button:hover {
+    background-color: #82A2B0;
+  }
+
 .image {
     width: 64px;
     height: 64px;
