Styled the asset pages

--- a/frontend/src/components/Asset.css
+++ b/frontend/src/components/Asset.css
@@ -21,7 +21,7 @@
   justify-content: center;
 }
 .assetInfoContainer {
-  gap: 0;
+  gap: 10px;
   flex: 0 0 auto;
   width: 599px;
   height: auto;
