--- a/frontend/src/Pages/Home.css
+++ b/frontend/src/Pages/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+
 .body {
     width: 100%;
     display: flex;
@@ -7,6 +9,7 @@
     justify-content: flex-start;
     background-color: #C9D7DD;
     overflow-y: scroll;
+    font-family: 'Open Sans', sans-serif;
   }
   .navbarContainer {
     flex: 0 0 auto;
@@ -34,7 +37,7 @@
   }
   .logoText {
     color: #003341;
-    width: 144px;
+    width: 130px;
     height: auto;
     text-align: left;
   }
