--- a/frontend/src/Pages/Home.css
+++ b/frontend/src/Pages/Home.css
@@ -3,11 +3,12 @@
 .body {
     width: 100%;
     display: flex;
-    height: 100%;
+    height: 100vh;
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
     background-color: #C9D7DD;
+    resize: ;
     overflow-y: scroll;
     font-family: 'Open Sans', sans-serif;
   }
@@ -117,13 +118,32 @@
     align-items: center;
     flex-direction: column;
     background-color: #F9FBFC;
-    border-radius: 20px 0px 0px 0px;
+    border-radius: 20px 0px 0px 20px;
   }
 
   .bottomContainer {
     display: flex;
     align-items: center;
-    height: 100px;
+    min-height: 100px;
   }
 
-  
+  /* width */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #E7EDF0;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #A5BDC7;
+    border-radius: 20px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #82A2B0;
+  }
