Created asset creation page

--- a/frontend/src/components/Asset.css
+++ b/frontend/src/components/Asset.css
@@ -8,8 +8,8 @@
   flex-direction: column;
 }
 .nameInput {
-  width: 941px;
-  height: 102px;
+  width: 80%;
+  height: auto;
   font-size: 32px;
   text-align: center;
 }
