--- a/frontend/src/components/Company/Company.css
+++ b/frontend/src/components/Company/Company.css
@@ -9,6 +9,8 @@
 .valueContainer {
     width: auto;
     padding-right: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .imageContainer {
