--- a/frontend/src/Pages/Home.css
+++ b/frontend/src/Pages/Home.css
@@ -146,7 +146,13 @@
     color: #E7EDF0;
     cursor: pointer;
   }
-
+  
+  .navbarButtonContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+  }
 
   /* width */
   ::-webkit-scrollbar {
@@ -167,4 +173,26 @@
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #82A2B0;
+  }
+
+  @media (max-width: 1000px) {
+    .mainContainer {
+      flex-direction: column;
+      align-items: center;
+    }
+    .rightContainer {
+      width: 100%;
+      border-radius: 0px 0px 0px 20px;
+    }
+    .navbarButtonContainer {
+      flex-direction: row;
+    }
+    .leftContainer {
+      max-width: 100%;
+      width: 100%;
+      padding-bottom: 16px;
+      align-items: center;
+      background-color: #C9D7DD;
+      border-bottom-width: 2px;
+    }
   }
